--- a/08 - project/02 - project completed/offline.html
+++ b/08 - project/02 - project completed/offline.html
@@ -26,7 +26,7 @@
 		<main>
 			<h1>Uh oh, you're offline!</h1>
 
-			<p>It looks like you've lost your internet connection. But don't worry, you can still <a href="menu.html">view our menu</a> and <a href="contact.html">access directions</a>.</p>
+			<p>It looks like you've lost your internet connection. But don't worry, you can still <a href="/menu.html">view our menu</a> and <a href="/contact.html">access directions</a>.</p>
 		</main>
 
 
